--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">goodbedford.com</a>
+            <a class="navbar-brand" href="../index.html">goodbedford.com</a>
         </div>
         <div>
             <ul class="nav navbar-nav">
@@ -175,8 +175,8 @@
         </section>
     -->
 
-<script src="js/bootstrap.js"></script>
 <script src="js/jquery-2.1.4.js"></script>
+<script src="js/bootstrap.js"></script>
 <script src="js/script.js"></script>
 
 </body>
