--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <li class=""><a href="https://www.linkedin.com/in/goodbedford">Linkedin</a></li>
                 <li class=""><a href="./views/projects.html">Projects</a></li>
                 <li class=""><a href="./views/community.html">Community</a></li>
-
+                <li class=""><a href="https://drive.google.com/open?id=0B60Waj_nZXhLWXZsWjZQdWQtcDg">Resume</a></li>
+                <li class=""><a href="mailto:goodbedford@gmail.com">goodbedford@gmail.com</a></li>
         <!--        <li><a href="#">resources</a></li>
                 <li><a href="#">blog-raps</a></li>
         -->
